--- a/index.html
+++ b/index.html
@@ -1,75 +1,66 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GPS Tracking - AL</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #222;
-      padding: 20px;
-    }
-    h2 {
-      color: #000;
-    }
-    p {
-      font-size: 18px;
-      line-height: 1.4em;
-    }
-    .label {
-      font-weight: bold;
-      color: teal;
-    }
-  </style>
+    <title>Tracking GPS Real-Time</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+        }
+        #coords {
+            margin-top: 20px;
+            font-weight: bold;
+            color: #007BFF;
+        }
+    </style>
 </head>
 <body>
-  <h2>GPS Tracking - AL</h2>
-  <p><span class="label">Latitude:</span> <span id="lat">Menunggu...</span></p>
-  <p><span class="label">Longitude:</span> <span id="lon">Menunggu...</span></p>
-  <p><span class="label">Akurasi (m):</span> <span id="acc">-</span></p>
-  <p><span class="label">Waktu:</span> <span id="time">-</span></p>
+    <h1>Lokasi Saat Ini (Real-Time)</h1>
+    <p id="status">Menunggu lokasi...</p>
+    <p id="coords"></p>
+    <p id="time"></p>
 
-  <script>
-    function updateGPS() {
-      if (!navigator.geolocation) {
-        alert("Geolocation tidak didukung oleh browser ini.");
-        return;
-      }
+    <script>
+        const status = document.getElementById('status');
+        const coords = document.getElementById('coords');
+        const time = document.getElementById('time');
 
-      const options = {
-        enableHighAccuracy: true,
-        timeout: 5000,
-        maximumAge: 0
-      };
+        if (!navigator.geolocation) {
+            status.textContent = 'Geolocation tidak didukung oleh browser ini.';
+        } else {
+            status.textContent = 'Mencari lokasi…';
+            // Update lokasi setiap 3 detik
+            navigator.geolocation.watchPosition(success, error, {
+                enableHighAccuracy: true,
+                maximumAge: 0,
+                timeout: 10000
+            });
+        }
 
-      navigator.geolocation.getCurrentPosition(success, error, options);
-    }
+        function success(position) {
+            const latitude  = position.coords.latitude.toFixed(6);
+            const longitude = position.coords.longitude.toFixed(6);
+            const accuracy  = position.coords.accuracy.toFixed(2);
+            const now = new Date();
 
-    function success(position) {
-      const lat = position.coords.latitude.toFixed(6);
-      const lon = position.coords.longitude.toFixed(6);
-      const acc = position.coords.accuracy.toFixed(0);
-      const waktu = new Date().toLocaleString('id-ID');
+            status.textContent = 'Lokasi ditemukan!';
+            coords.textContent = `Latitude: ${latitude}, Longitude: ${longitude}, Akurasi: ±${accuracy} m`;
+            time.textContent = `Terakhir update: ${now.toLocaleTimeString()}`;
+        }
 
-      document.getElementById("lat").textContent = lat;
-      document.getElementById("lon").textContent = lon;
-      document.getElementById("acc").textContent = acc;
-      document.getElementById("time").textContent = waktu;
-
-      console.log(`Update GPS: ${lat}, ${lon}`);
-    }
-
-    function error(err) {
-      console.warn(`ERROR(${err.code}): ${err.message}`);
-    }
-
-    // 🔁 Auto-run saat halaman dibuka
-    updateGPS();
-
-    // ⏱️ Auto-refresh setiap 10 detik
-    setInterval(updateGPS, 10000);
-  </script>
+        function error(err) {
+            status.textContent = `Gagal mendapatkan lokasi: ${err.message}`;
+            coords.textContent = '';
+            time.textContent = '';
+        }
+    </script>
 </body>
 </html>
