--- a/view.html
+++ b/view.html
@@ -2,30 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Share Lokasi - Jambi</title>
+  <title>Peta Live - Provinsi Jambi</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f5f5f5;
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
     }
-    h2 { color: #333; }
-    p { font-size: 18px; }
-    #status { font-weight: bold; margin-top: 20px; color: #007BFF; }
+    #map {
+      height: 100%;
+      width: 100%;
+    }
   </style>
-</head>
-<body>
-  <h2>Share Lokasi — Provinsi Jambi</h2>
-  <p id="status">Menunggu...</p>
 
-  <!-- Firebase SDK dari CDN -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-  <script>
-    const statusEl = document.getElementById('status');
+  <!-- Leaflet.js -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+</head>
+<body>
+  <div id="map"></div>
 
+  <script>
     // ======= Firebase Config milikmu =======
     const firebaseConfig = {
       apiKey: "AIzaSyBffrwvdzVsGcFgjvhvc1FbeaXXJ43DcF8",
@@ -38,46 +39,51 @@
       measurementId: "G-G4PJ707CD6"
     };
     // =======================================
-
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Buat visitorId stabil menggunakan localStorage
-    let visitorId = localStorage.getItem('visitorId');
-    if(!visitorId){
-      visitorId = 'v_' + Math.random().toString(36).slice(2,9);
-      localStorage.setItem('visitorId', visitorId);
-    }
+    // Pusat peta ke Provinsi Jambi
+    const jambiCenter = [-1.59, 103.61];
 
-    if (!navigator.geolocation) {
-      statusEl.textContent = 'Browser tidak mendukung Geolocation.';
-    } else {
-      statusEl.textContent = 'Mencari lokasi…';
-      navigator.geolocation.getCurrentPosition(sendPosition, err => {
-        statusEl.textContent = 'Gagal: ' + err.message;
-      }, { enableHighAccuracy: true, timeout: 10000 });
-    }
+    // Inisialisasi peta
+    const map = L.map('map').setView(jambiCenter, 8);
 
-    function sendPosition(pos) {
-      const lat = pos.coords.latitude;
-      const lon = pos.coords.longitude;
-      const acc = pos.coords.accuracy;
-      const ts = Date.now();
+    // Tambahkan tile layer OpenStreetMap
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
 
-      // Simpan ke database Firebase
-      db.ref('locations/' + visitorId).set({
-        lat: lat,
-        lon: lon,
-        accuracy: acc,
-        ts: ts,
-        label: visitorId
-      }).then(()=> {
-        statusEl.textContent = 'Lokasi dikirim. Terima kasih.';
-      }).catch(e=>{
-        statusEl.textContent = 'Gagal kirim: ' + e.message;
+    // Menyimpan semua marker
+    const markers = {};
+
+    // Mendengarkan perubahan realtime dari Firebase
+    db.ref('locations').on('value', snapshot => {
+      const data = snapshot.val();
+      if (!data) return;
+
+      Object.keys(data).forEach(id => {
+        const loc = data[id];
+        const latlng = [loc.lat, loc.lon];
+        const label = loc.label || id;
+
+        if (markers[id]) {
+          // Update posisi marker jika sudah ada
+          markers[id].setLatLng(latlng);
+        } else {
+          // Buat marker baru dengan warna acak
+          const color = '#' + Math.floor(Math.random()*16777215).toString(16);
+          const icon = L.divIcon({
+            html: `<div style="background:${color};width:16px;height:16px;border-radius:50%;border:2px solid white;"></div>`,
+            iconSize: [16,16]
+          });
+
+          const marker = L.marker(latlng, { icon }).addTo(map);
+          marker.bindPopup(`<b>${label}</b><br>${latlng[0].toFixed(4)}, ${latlng[1].toFixed(4)}`);
+          markers[id] = marker;
+        }
       });
-    }
+    });
   </script>
 </body>
 </html>
